--- a/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
@@ -792,19 +792,19 @@ alebo zadajte heslo"</string>
     <string name="auto_task_default_task_summary_driver_car">Zapnúť prenosný hotspot pri pripojení k systému auta cez Bluetooth</string>
     <string name="auto_task_default_task_summary_get_up">Vypnúť režim DND a znova zapnúť Bluetooth, Wi-Fi a mobilné dáta</string>
     <string name="auto_task_default_task_summary_listen_music">Prehrávanie hudby a výber typu slúchadiel</string>
-    <string name="auto_task_default_task_summary_meet">Naplánujte si čas stretnutia a zapnúť režim DND</string>
-    <string name="auto_task_default_task_summary_noon_break">Naplánujte si čas spánku a zapnúť režim DND</string>
+    <string name="auto_task_default_task_summary_meet">Naplánovať si čas stretnutia a zapnúť režim DND</string>
+    <string name="auto_task_default_task_summary_noon_break">Naplánovať si čas spánku a zapnúť režim DND</string>
     <string name="auto_task_default_task_summary_save_power">Zapnúť šetrič batérie, keď je batéria nižšia ako 30%</string>
-    <string name="auto_task_default_task_summary_sleep">Naplánujte si večierku a prispôsobte správanie zariadenia</string>
-    <string name="auto_task_default_task_summary_watch_video">Otvorte aplikáciu, zapnúť Wi-Fi, upravte hlasitosť</string>
+    <string name="auto_task_default_task_summary_sleep">Naplánovať si večierku a prispôsobiť správanie zariadenia</string>
+    <string name="auto_task_default_task_summary_watch_video">Otvoriť aplikáciu, zapnúť Wi-Fi, upraviť hlasitosť</string>
     <string name="auto_task_default_task_title_driver_car">Jazda</string>
     <string name="auto_task_default_task_title_get_up">Vstávaj</string>
     <string name="auto_task_default_task_title_listen_music">Počúvanie hudby</string>
     <string name="auto_task_default_task_title_meet">Stretnutie</string>
     <string name="auto_task_default_task_title_noon_break">Spánok</string>
-    <string name="auto_task_default_task_title_save_power">Šetrite batériu</string>
+    <string name="auto_task_default_task_title_save_power">Šetrenie batérie</string>
     <string name="auto_task_default_task_title_sleep">Spánok</string>
-    <string name="auto_task_default_task_title_watch_video">Pozerať videá</string>
+    <string name="auto_task_default_task_title_watch_video">Pozeranie videí</string>
     <string name="auto_task_delete_task">Odstrániť úlohu</string>
     <string name="auto_task_dialog_button_close">Hotovo</string>
     <string name="auto_task_disconnect_to_some_device">Odpojiť od %s</string>
@@ -898,7 +898,7 @@ alebo zadajte heslo"</string>
     <string name="auto_task_select_address_to">Prísť</string>
     <string name="auto_task_set_conncet_bluetooth">Nastaviť</string>
     <string name="auto_task_set_conncet_wlan">Nastaviť</string>
-    <string name="auto_task_set_exit_condition">Použite podmienky dokončenia</string>
+    <string name="auto_task_set_exit_condition">Použiť podmienky dokončenia</string>
     <string name="auto_task_set_exit_condition_summary">Úlohu dokončite, keď je splnená jedna z nasledujúcich podmienok</string>
     <string name="auto_task_set_open_app">Nastaviť</string>
     <string name="auto_task_setting_allow_notify">Povoliť upozornenia</string>
@@ -978,10 +978,10 @@ alebo zadajte heslo"</string>
     <string name="battery_stats_wake_lock_label">Prebudený</string>
     <string name="battery_stats_wifi_running_label">Wi‑Fi</string>
     <string name="battery_status_good">Funguje normálne</string>
-    <string name="battery_status_level_excellent">Výborné</string>
-    <string name="battery_status_level_good">Dobré</string>
-    <string name="battery_status_level_normal">Normálne</string>
-    <string name="battery_status_level_poor">Slabé</string>
+    <string name="battery_status_level_excellent">Výborná</string>
+    <string name="battery_status_level_good">Dobrá</string>
+    <string name="battery_status_level_normal">Normálna</string>
+    <string name="battery_status_level_poor">Slabá</string>
     <string name="battery_status_overheat">Prehriata</string>
     <string name="battery_status_unknown">Neznáma chyba</string>
     <string name="battery_temperature_title">Teplota</string>
@@ -4782,7 +4782,7 @@ Rešpektujeme a chránime vaše súkromie."</string>
     <string name="task_summary_close_mute">Vypnúť tichý režim</string>
     <string name="task_summary_close_network">Vypnúť mobilné dáta</string>
     <string name="task_summary_close_nfc">Vypnúť NFC</string>
-    <string name="task_summary_close_rotate_lock">Orientácia odomknutia</string>
+    <string name="task_summary_close_rotate_lock">Odomknúť orientáciu</string>
     <string name="task_summary_close_save_battery">Vypnúť šetrič batérie</string>
     <string name="task_summary_close_screen_display">Vypnúť vždy zapnuté zobrazenie</string>
     <string name="task_summary_close_system_touch">Vypnúť hmatovú odozvu</string>
@@ -4896,11 +4896,11 @@ Rešpektujeme a chránime vaše súkromie."</string>
     <string name="title_cloud_space_almost_full">Cloudové úložisko je takmer plné</string>
     <string name="title_cloud_space_full">"Cloudové úložisko je plné, nie je možné synchronizovať"</string>
     <string name="title_cmcc_app_check">Overenie nie je dokončené</string>
-    <string name="title_condition_absorbed">Režim zaostrenia</string>
+    <string name="title_condition_absorbed">Režim sústredenia</string>
     <string name="title_condition_alarm">Budík</string>
     <string name="title_condition_battery">Batéria</string>
     <string name="title_condition_bluetooth">Bluetooth</string>
-    <string name="title_condition_bluetooth_device">Pripojenie k zariadeniu Bluetooth</string>
+    <string name="title_condition_bluetooth_device">Pripojiť k zariadeniu Bluetooth</string>
     <string name="title_condition_bluetooth_disconnect_device">Odpojiť od zariadenia Bluetooth</string>
     <string name="title_condition_charge">Nabíja sa</string>
     <string name="title_condition_connect_wlan">Pripojiť sa k sieti Wi-Fi</string>
@@ -4977,7 +4977,7 @@ Rešpektujeme a chránime vaše súkromie."</string>
     <string name="title_result_drive">Režim auta</string>
     <string name="title_result_examination">Bezpečnostná kontrola</string>
     <string name="title_result_eye_care">Režim čítania</string>
-    <string name="title_result_flashlight">Baterka</string>
+    <string name="title_result_flashlight">Svietidlo</string>
     <string name="title_result_hotspot">Prenosný hotspot</string>
     <string name="title_result_location">Poloha</string>
     <string name="title_result_lock_screen">Uzamknúť obrazovku</string>
@@ -4995,7 +4995,7 @@ Rešpektujeme a chránime vaše súkromie."</string>
     <string name="title_result_twinkle">Režim proti blikaniu</string>
     <string name="title_result_typeface">Veľkosť textu a hrúbka písma</string>
     <string name="title_result_wlan">Wi-Fi</string>
-    <string name="title_result_zen_mode">Režim NND</string>
+    <string name="title_result_zen_mode">Režim DND</string>
     <string name="title_safe_mode">Povoliť Bezpečný režim</string>
     <string name="title_saving_switch">Úspora dát je vypnutá</string>
     <string name="title_share_link">Zdieľať URL</string>
@@ -5424,5 +5424,11 @@ Skúste zväčšiť rozlíšenie!"</string>
      <string name="app_predict_privacy_user_agreement_text">Zmluva s používateľom</string>
      <string name="app_predict_widget_experience_now">Vyskúšať</string>
      <string name="app_predict_widget_summary">Rýchlo spúšťajte aplikácie, ktoré by ste práve teraz mohli potrebovať</string>
-     <string name="app_predict_widget_title">Návrhy aplikácií</string>    
+     <string name="app_predict_widget_title">Návrhy aplikácií</string>   
+     <string name="summary_confirm_open_flashligt">Zapnúť svietidlo?</string>
+<string name="summary_open_flashligt">Zapnúť svietidlo</string> 
+     <string name="summary_confirm_switch">Vypnúť zariadenie?</string>
+          <string name="select_app_title_default">Otvoriť aplikáciu</string>
+     <string name="select_app_title_music">Prehrať hudbu</string>
+          <string name="add_auto_task_desktop_icon">Pridať odkaz na plochu</string>
 </resources>
