--- a/Slovak/main/DownloadProviderUi.apk/res/values-sk/strings.xml
+++ b/Slovak/main/DownloadProviderUi.apk/res/values-sk/strings.xml
@@ -394,4 +394,5 @@ Táto funkcia nie je mimo Čínu odporúčaná"</string>
     <string name="xunlei_speed_service">Xunlei sťahovanie</string>
     <string name="xunlei_switch">Xunlei sťahovanie</string>
     <string name="yesterday">Včera</string>
+         <string name="menu_title_fileexplore">Správca súborov</string>
 </resources>
