--- a/Slovak/main/MusicFX.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MusicFX.apk/res/values-sk/strings.xml
@@ -6,7 +6,7 @@
     <string name="eq_dialog_title">Ekvalizér</string>
     <string name="headset_plug">Tieto efekty je možné aktivovať len so zapojenými slúchadlami.</string>
     <string name="main_toggle_effects_title">Zvukové efekty</string>
-    <string name="no_effects">Efekty nie sú k dispozícií</string>
+    <string name="no_effects">Efekty nie sú k dispozícii</string>
     <string name="picker_title">Ovládací panel hudobných efektov</string>
     <string name="pr_dialog_title">Dozvuk (predvoľba)</string>
     <string name="pr_summary">Efekty dozvuku v miestnosti</string>
